--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1041,11 +1041,9 @@ p span {
 /* button#nav-profile-tab {
     margin-left: 18px;
 } */
-button#nav-home-tabs {
-    border-radius: 30px;
+button#nav-home-tab {
+    border-radius: 30px 0px 0px 30px;
     border: none;
-    margin-left: -20px;
-    margin-bottom: -30px;
 }
 
 button#nav-profile-tab {
